--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Skodfest 2023</title>
+    <title>#skodfest 2023</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="assets/images/favi.png" />
   </head>
   <body>
     <app-root></app-root>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
